# defromcontact_ros

./: readme.md  requirements.txt
doosan-robot/dsr_description/launch/: m0609.launch
doosan-robot/dsr_description/urdf/: m0609_robotiq_2f_85.urdf
doosan-robot/dsr_description/xacro/: m0609_robotiq_2f_85.urdf.xacro
doosan-robot/moveit_config_m0609_robotiq_2f_85/: .setup_assistant  CMakeLists.txt  package.xml
doosan-robot/moveit_config_m0609_robotiq_2f_85/config/: fake_controllers.yaml  gazebo_m0609_robotiq_2f_85.urdf  joint_limits.yaml  m0609_robotiq_2f_85.srdf  ompl_planning.yaml
doosan-robot/moveit_config_m0609_robotiq_2f_85/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml
sim_isaac/: CMakeLists.txt  package.xml
sim_isaac/config/: d435i_caminfo.txt
sim_isaac/launch/: isaac_execution.launch
sim_isaac/model/isaac/: action_graph.usda  test_cloth.usda  (+1 more)
sim_isaac/output/pose_cube/: pose.npz
sim_isaac/scripts/: combined_joints_publisher_camera.py  convert_32SC1_to_8UC1.py  pose_planner_debug.py  pose_planner_joint.py  pose_planner_pose.py  pose_planner_pose_backup.py  publish_camera_info.py  rotations.py  sensor_data.py
(+19 files in other folders)
